[package]
name = "lfm-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lfm_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
serde_json = "1.0.149"
zmq = "0.10.0"
simple-render = { git = "https://github.com/BreadAboba228/simple-graphics-stack", branch = "master", package = "simple-render" }
simple-3d = { git = "https://github.com/BreadAboba228/simple-graphics-stack", branch = "master", package = "simple-3d" }
simple-linear-algebra = { git = "https://github.com/BreadAboba228/simple-graphics-stack", branch = "master", package = "simple-linear-algebra" }
minifb = "0.28.0"
